--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,19 @@
 	</dependencies>
 
 	<build>
+        <finalName>books</finalName>
 		<plugins>
+        
+            <plugin>
+                <artifactId>maven-eclipse-plugin</artifactId>
+                <version>2.8</version>
+                <configuration>
+                    <downloadSources>true</downloadSources>
+                    <downloadJavadocs>true</downloadJavadocs>
+                    <wtpversion>1.5</wtpversion>
+                </configuration>
+            </plugin>
+            
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -133,6 +145,7 @@
 					<showWarnings>true</showWarnings>
 				</configuration>
 			</plugin>
+            
 		</plugins>
 	</build>
 
