--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,8 +6,16 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
+	<filter>
+		<filter-name>userNameFilter</filter-name>
+		<filter-class>com.blogspot.nurkiewicz.rest.UserNameFilter</filter-class>
+	</filter>
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>userNameFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
